# dmcli

./: .cache.plan  .gitignore  .rustfmt.toml  AGENTS.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  TTRPG.md  build.rs  deny.toml  example-config.toml  rust-toolchain.toml  setup-hooks.sh
.github/: dependabot.yml
.github/workflows/: build.yml  ci.yml  security.yml
cli/: Cargo.toml
cli/src/: config.rs  main.rs  result.rs
dmcli/: Cargo.toml
dmcli/src/: error.rs  main.rs  result.rs
dmlib/: Cargo.toml
dmlib/src/: database.rs  dice.rs  error.rs  index.rs  lib.rs  result.rs
hooks/: pre-commit
lib/: Cargo.toml
lib/src/: database.rs  dice.rs  error.rs  index.rs  lib.rs
lib/src/database/: init.sql  insert_document_chunks.sql  insert_embedding.sql  mod.rs  select_similar_text.sql
lib/src/index/: document_index.rs  embedding.rs  markdown.rs  mod.rs  qdrant_store.rs  search_result.rs  sqlite_store.rs  vector_store.rs
src/: anthropic.rs  anthropic_broken.rs  chat_history.rs  commands.rs  conversation.rs  database.rs  embeddings.rs  errors.rs  events.rs  input.rs  llm_client.rs  local_agent.rs  logger.rs  main.rs  markdown.rs  obsidian.rs  obsidian.rs.bak  test_integration.rs  tools.rs  tui.rs
