[workspace]
resolver = "3"
members = [
  "cli",
  "lib",
]
default-members = [
  "cli",
  "lib",
]

[workspace.package]
version = "0.2.1"
edition = "2024"
rust-version = "1.85"
license = "MIT"

[workspace.dependencies]
async-trait = { version = "0.1.89", default-features = false }
dirs = { version = "6.0.0", default-features = false }
serde = { version = "1.0.228", default-features = false }
toml = { version = "1.1", default-features = false }
toml_edit = { version = "0.25", default-features = false }
caith = { version = "4.2.4", default-features = false }
candle-core = { version = "0.10.2", default-features = false }
candle-nn = { version = "0.10.2", default-features = false }
candle-transformers = { version = "0.10.2", default-features = false }
clap = { version = "4.6.1", default-features = false }
hex = { version = "0.4.3", default-features = false }
hf-hub = { version = "0.5.0", default-features = false }
libsql = { version = "0.9.30", features = ["core"] }
pulldown-cmark = { version = "0.13.3", default-features = false }
serde_json = { version = "1.0.149", default-features = false }
sha2 = { version = "0.11.0", default-features = false }
tempfile = { version = "3.27.0", default-features = false }
text-splitter = { version = "0.29.3", default-features = false }
tokio = { version = "1.52.1", default-features = false }
tokenizers = { version = "0.22.2", default-features = false }
unwrap-infallible = { version = "1.0.0", default-features = false }
walkdir = { version = "2.5.0", default-features = false }
