[workspace]
resolver = "3"
members = [
  "cli",
  "lib",
]
default-members = [
  "cli",
  "lib",
]

[workspace.package]
version = "0.2.1"
edition = "2024"
rust-version = "1.85"
license = "MIT"

[workspace.dependencies]
caith = { version = "4.2.4", default-features = false }
clap = { version = "4.6.1", default-features = false }
serde_json = { version = "1.0.150", features = ["std"] }
