[package]
name = "cli"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
lib = { path = "../lib" }
clap = { workspace = true, features = [
  "color",
  "derive",
  "error-context",
  "help",
  "std",
  "string",
  "suggestions",
  "usage",
  "wrap_help",
] }
tokio = { workspace = true, features = [
  "macros",
  "rt",
  "rt-multi-thread",
  "sync",
] }
