[package]
name = "cli"
edition.workspace = true
version.workspace = true
license.workspace = true

[[bin]]
name = "dmcli"
path = "src/main.rs"

[dependencies]
lib = { path = "../lib" }
dirs = { workspace = true }
serde = { workspace = true, features = ["derive"] }
toml = { workspace = true, features = ["parse", "serde"] }
toml_edit = { workspace = true, features = ["parse", "display"] }
clap = { workspace = true, features = [
  "color",
  "derive",
  "error-context",
  "help",
  "std",
  "string",
  "suggestions",
  "usage",
  "wrap_help",
] }
tokio = { workspace = true, features = [
  "macros",
  "rt",
  "rt-multi-thread",
  "sync",
] }

[dev-dependencies]
tempfile = { workspace = true }
