[package]
name = "lib"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
caith = { workspace = true }
libsql = { workspace = true, features = [
  "core",
] }
tempfile = { workspace = true }
text-splitter = { workspace = true, features = [
  "markdown",
  "tokenizers",
] }
tokenizers = { workspace = true, features = [
  "http",
] }
walkdir = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = [
  "macros",
  "rt",
  "rt-multi-thread",
  "sync",
] }
