[package]
name = "lib"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
caith = { workspace = true }
candle-core = { workspace = true, features = [
] }
candle-nn = { workspace = true, features = []}
candle-transformers = { workspace = true, features = [
] }
hex = { workspace = true, features = ["alloc"] }
hf-hub = { workspace = true, features = [
] }
pulldown-cmark = { workspace = true, features = [] }
qdrant-client = { workspace = true, features = [] }
serde_json = { workspace = true, features = [
] }
sha2 = { workspace = true, features = [] }
tempfile = { workspace = true }
text-splitter = { workspace = true, features = [
  "markdown",
  "tokenizers",
] }
tokenizers = { workspace = true, features = [
  "http",
] }
walkdir = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = [
  "macros",
  "rt",
  "rt-multi-thread",
  "sync",
] }
