[package]
name = "lib"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
async-trait = { workspace = true }
caith = { workspace = true }
candle-core = { workspace = true }
candle-nn = { workspace = true }
candle-transformers = { workspace = true }
hex = { workspace = true, features = [
  "alloc",
] }
hf-hub = { workspace = true }
pulldown-cmark = { workspace = true }
qdrant-client = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
tempfile = { workspace = true }
text-splitter = { workspace = true, features = [
  "markdown",
  "tokenizers",
] }
tokenizers = { workspace = true, features = [
  "http",
] }
walkdir = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = [
  "macros",
  "rt",
  "rt-multi-thread",
  "sync",
] }
